# NicoLauncher

./: .gitignore  Cargo.toml  LICENSE  MC-LAUNCHER-TEMPLATE-SPEC.md  README.md  instances-registry.example.json  launcher.config.toml  package-lock.json  package.json  tailwind.config.js  updater.key.pub  vite.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
crates/admin-cli/: Cargo.toml
crates/admin-cli/src/: config.rs  lockfile.rs  main.rs
crates/admin-cli/src/commands/: auth.rs  launch.rs  manifest.rs  mod.rs  sign.rs  sync.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs  minecraft.rs  oauth.rs  storage.rs  xbox.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  hash.rs  lib.rs  loader.rs  paths.rs  progress.rs
crates/downloader/: Cargo.toml
crates/downloader/src/: lib.rs
crates/java-manager/: Cargo.toml
crates/java-manager/src/: lib.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: launch.rs  lib.rs  rules.rs
crates/loaders/: Cargo.toml
crates/loaders/src/: fabric.rs  forge.rs  lib.rs  merge.rs  neoforge.rs  quilt.rs
crates/manifest-client/: Cargo.toml
crates/manifest-client/src/: lib.rs
crates/manifest-client/tests/: sync_e2e.rs
crates/meta/: Cargo.toml
crates/meta/src/: client.rs  lib.rs  types.rs
crates/mods/: Cargo.toml
crates/mods/src/: lib.rs
docs/: admin-guide.md  architecture.md  customization-guide.md  loaders-fabric.md  loaders-forge.md  loaders-neoforge.md  loaders-quilt.md  manifest-schema.md  manual-testing.md  publishing-manifests.md  security.md
manifest-server-examples/git-based/: README.md
manifest-server-examples/git-based/.github/workflows/: update-manifest.yml
manifest-server-examples/rust-server/: Cargo.toml  README.md  manifest.json
manifest-server-examples/rust-server/src/: main.rs
manifest-server-examples/static-host/: README.md
scripts/: init-template.ps1  init-template.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: auth.rs  branding.rs  instances.rs  launch.rs  manifest.rs  mod.rs  mods.rs  settings.rs  status.rs  sync.rs  updater.rs
src/lib/: tauri.ts
src/lib/components/: Toast.svelte
src/lib/screens/: Home.svelte  Login.svelte  OptionalMods.svelte  Settings.svelte  Splash.svelte
src/lib/stores/: auth.ts  branding.ts  screen.ts  toast.ts
src/routes/: +layout.svelte  +page.svelte
