[workspace]
members = [
    "crates/core",
    "crates/meta",
    "crates/auth",
    "crates/loaders",
    "crates/mods",
    "crates/manifest-client",
    "crates/downloader",
    "crates/java-manager",
    "crates/launcher",
    "crates/admin-cli",
]
resolver = "2"

[workspace.package]
version    = "0.1.0"
edition    = "2021"
license    = "MIT OR Apache-2.0"
repository = "https://github.com/YOUR_ORG/mc-launcher-template"

[workspace.dependencies]
# Async
tokio         = { version = "1", features = ["full"] }
futures       = "0.3"
async-trait   = "0.1"

# HTTP
reqwest       = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Serialization
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
toml          = "0.8"

# Error handling
thiserror     = "1"
anyhow        = "1"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Hashing
sha1          = "0.10"
sha2          = "0.10"
hex           = "0.4"

# Filesystem / OS
dirs          = "5"
which         = "6"

# Misc
chrono        = { version = "0.4", features = ["serde"] }
url           = "2"
uuid          = { version = "1", features = ["v4"] }
semver        = "1"

# CLI (only used by admin-cli)
clap          = { version = "4", features = ["derive"] }

[profile.release]
lto           = true
strip         = true
codegen-units = 1
