[package]
name    = "mc-launcher-app"
version = "0.1.0"
edition = "2021"

[lib]
name        = "mc_launcher_app"
crate-type  = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
toml        = "0.8"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

[dependencies]
tauri                  = { version = "2", features = ["devtools"] }
url                    = "2"
tauri-plugin-shell     = "2"
tauri-plugin-updater   = "2"

serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
tokio         = { version = "1", features = ["full"] }
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono        = { version = "0.4", features = ["serde"] }
reqwest       = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow        = "1"
toml          = "0.8"
dirs          = "5"
open          = "5"

launcher-core            = { path = "../crates/core" }
launcher-auth            = { path = "../crates/auth" }
launcher-meta            = { path = "../crates/meta" }
launcher-downloader      = { path = "../crates/downloader" }
launcher-java-manager    = { path = "../crates/java-manager" }
launcher-launcher        = { path = "../crates/launcher" }
launcher-loaders         = { path = "../crates/loaders" }
launcher-manifest-client = { path = "../crates/manifest-client" }
launcher-mods            = { path = "../crates/mods" }
