[package]
name        = "mc-launcher-admin"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mc-launcher"
path = "src/main.rs"

[dependencies]
launcher-core         = { path = "../core" }
launcher-meta         = { path = "../meta" }
launcher-downloader   = { path = "../downloader" }
launcher-java-manager = { path = "../java-manager" }
launcher-launcher     = { path = "../launcher" }

tokio        = { workspace = true }
anyhow       = { workspace = true }
clap         = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
toml         = { workspace = true }
