[package]
name        = "mc-launcher-admin"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mc-launcher"
path = "src/main.rs"

[dependencies]
launcher-core            = { path = "../core" }
launcher-meta            = { path = "../meta" }
launcher-auth            = { path = "../auth" }
launcher-loaders         = { path = "../loaders" }
launcher-downloader      = { path = "../downloader" }
launcher-java-manager    = { path = "../java-manager" }
launcher-launcher        = { path = "../launcher" }
launcher-manifest-client = { path = "../manifest-client" }
launcher-mods            = { path = "../mods" }

tokio        = { workspace = true }
anyhow       = { workspace = true }
clap         = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
toml         = { workspace = true }
reqwest      = { workspace = true }
chrono       = { workspace = true }
sha1         = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
ed25519-dalek = { workspace = true }
# rand_core 0.6 específico para OsRng compatible con ed25519-dalek 2.x
rand_core    = { version = "0.6", features = ["getrandom"] }
