[package]
name        = "launcher-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
launcher-core = { path = "../core" }

tokio        = { workspace = true }
reqwest      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
chrono       = { workspace = true }
keyring      = { workspace = true }
rand         = { workspace = true }
sha2         = { workspace = true }
base64       = { workspace = true }
open         = { workspace = true }
