[package]
name        = "launcher-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sha1        = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
dirs        = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
