[package]
name        = "launcher-downloader"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
launcher-core = { path = "../core" }

tokio        = { workspace = true }
reqwest      = { workspace = true }
futures      = { workspace = true }
sha1         = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
tracing      = { workspace = true }
