[package]
name        = "launcher-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
launcher-core = { path = "../core" }
launcher-meta = { path = "../meta" }

tokio        = { workspace = true }
tracing      = { workspace = true }
serde        = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
