[package]
name        = "launcher-loaders"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
launcher-core = { path = "../core" }
launcher-meta = { path = "../meta" }
tokio         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
async-trait   = { workspace = true }
tracing       = { workspace = true }
