[package]
name        = "launcher-loaders"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
launcher-core       = { path = "../core" }
launcher-meta       = { path = "../meta" }
launcher-downloader = { path = "../downloader" }

tokio        = { workspace = true }
reqwest      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
async-trait  = { workspace = true }
tracing      = { workspace = true }
