[package]
name        = "launcher-manifest-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
launcher-core = { path = "../core" }
tokio         = { workspace = true }
reqwest       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
async-trait   = { workspace = true }
tracing       = { workspace = true }
launcher-mods = { path = "../mods" }
chrono        = { workspace = true }
